# mnist

./: .gitignore  CMakeLists.txt  Makefile  README.md  cnn.py  densenet.py  resnet.cpp  resnet.py  test.py
